--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -5,6 +5,7 @@
 
     <TextView
         android:layout_width="match_parent"
+        android:background="@color/colorAccent"
         android:layout_height="match_parent"
         android:id="@+id/item_tv"></TextView>
 
